# drlang

./: .gitignore  CLI_FEATURES.md  README.md  pyproject.toml  test_tokenize.py
drl/: test_tokenize.py
drl/.github/: copilot-instructions.md
drl/examples/: custom_functions_demo.py  custom_syntax_demo.py  regex_demo.py
drl/src/drl/: functions.py  language.py
drl/tests/: test_regex.py
examples/: cli_demo.py  custom_functions_demo.py  custom_syntax_demo.py  drop_empty_demo.py  error_demo.py  list_operations_demo.py  nested_references_demo.py  optional_references_demo.py  regex_demo.py
src/drl/: __init__.py
src/drlang/: __init__.py  cli.py  functions.py  language.py
tests/: test_custom_functions.py  test_custom_syntax.py  test_drop_empty.py  test_functions.py  test_interpolate.py  test_language.py  test_list_operations.py  test_logical.py  test_nested_references.py  test_operators.py  test_optional_references.py  test_reference_paths.py  test_regex.py
