[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drlang"
version = "0.1.12"
description = 'lightweight dynamic reference language interpreter for python'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dane Howard", email = "mirrord@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mirrord/drl#readme"
Issues = "https://github.com/mirrord/drl/issues"
Source = "https://github.com/mirrord/drl"

[tool.hatch.version]
path = "src/drlang/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/drlang tests}"

[tool.coverage.run]
source_pkgs = ["drlang", "tests"]
branch = true
parallel = true
omit = [
  "src/drlang/__about__.py",
]

[tool.coverage.paths]
drlang = ["src/drlang", "*/drlang/src/drlang"]
tests = ["tests", "*/drlang/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
